--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ src/DomainJoiner/.vs/DomainJoiner/v16/Server/sqlite3/storage.ide-wal
 src/DomainJoiner/.vs/DomainJoiner/v16/.suo
 src/DomainJoiner/.vs/DomainJoiner/v16/Server/sqlite3/storage.ide-wal
 src/DomainJoiner/obj/Debug/DomainJoiner.csprojAssemblyReference.cache
+src/DomainJoiner/bin/Release/DomainJoiner.exe.config
+src/DomainJoiner/bin/Release/DomainJoiner.exe
+src/DomainJoiner/bin/Release/DomainJoiner.pdb
+src/DomainJoiner/obj/Release/DomainJoiner.csproj.FileListAbsolute.txt
+src/DomainJoiner/obj/Release/DomainJoiner.exe
+src/DomainJoiner/obj/Release/DomainJoiner.pdb
+src/DomainJoiner/.vs/DomainJoiner/v16/Server/sqlite3/storage.ide-wal
+src/DomainJoiner/.vs/DomainJoiner/v16/.suo
+src/DomainJoiner/.vs/DomainJoiner/v16/Server/sqlite3/storage.ide-wal
